--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
-add hint text to move mouse up in order to 'click' the link
+// add hint text to move mouse up in order to 'click' the link
+hint text makes previewbox disappear
 center the previewbox around the html element rather than mouse position
 animate transition
 ? not use window.location.href
