--- a/todo.txt
+++ b/todo.txt
@@ -3,8 +3,10 @@
 // center the previewbox around the html element rather than mouse position
 animate transition
 make previewHint beautiful
-? not use window.location.href
+? not use window.location.href (very hard)
+? turn everything into iframes (so i dont have to use window.location.href)
 ? custom 'undo' history (with animations ofc)
 custom context menu to disable/enable feature
 implement into previous project (orenouno.netlify.app)
 ? make website beautiful
+? start loading all links' iframes when entering viewport (just like next.js)
